# AtelierGit

./: Makefile.in  bigtest.gladep  chercher.txt  configure.in  main.c  user.c  user.h
Admin/: Makefile  Makefile.am  bigtest.glade  config.h  config.status  configure
Admin/autom4te.cache/: output.1  requests  traces.0
Admin/src/: Makefile.am  interface.c  interface.c.bak
Etudiant/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  etudiant.glade.bak  etudiant.gladep
Etudiant/autom4te.cache/: output.0  requests  traces.0  traces.1
Etudiant/src/: Etudiant.c  Etudiant.h  Etudiant.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  etudiant  interface.c  interface.c.bak  main.c
autom4te.cache/: traces.1
menuprjt1/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  menu.txt  menuprjt1.glade  menuprjt1.gladep
menuprjt1/autom4te.cache/: output.0  requests  traces.0  traces.1
menuprjt1/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  menu.txt  menuprjt1  repas.c  repas.h
project/: Makefile  config.status  project25.glade
project/autom4te.cache/: requests
project/src/: Makefile  callbacks.c  capteur.c  capteur.h  capteurs.txt  interface.c  interface.c.bak  mesures.txt  project6
projet12/: Makefile  Makefile.in  config.status  projet12.gladep
projet12/autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile  Makefile.in  User.txt  bigtest  callbacks.c  callbacks.h  main.c
